k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shapes-calculator
  labels:
    name: shapes-calculator
    app: shapes-calculator
