k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shapes-calculator-service
  namespace: shapes-calculator
  labels:
    app: shapes-calculator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: shapes-calculator

---
apiVersion: v1
kind: Service
metadata:
  name: shapes-calculator-nodeport
  namespace: shapes-calculator
  labels:
    app: shapes-calculator
    service-type: nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: shapes-calculator
